[package]
name = "git-racoon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.49.0", features = ["full"]}
axum = "0.8.8"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"]}
color-eyre = "0.6.5"
git2 = "0.20.3"
keyring = "3.6.3"
reqwest = {version = "0.13.1", features = ["json"]}
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
webbrowser = "1.0.6"
anyhow = "1.0.100"
futures-util = "0.3.31"
